@@ -1,3 +1,9 @@
+Thu Jun 20 05:47:41 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (gc_prof_sweep_timer_start): fix merge miss.
+
+	* gc.c (GC_PROFILE_MORE_DETAIL): set it 0.
+
 Thu Jun 20 05:38:56 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: Accumulate sweep time to GC time.
